--- a/css/main.css
+++ b/css/main.css
@@ -146,6 +146,7 @@ body > section {
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
+  text-shadow: 2px 2px #000000;
 }
 
 .transparent-bg {
